<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:iconTint="@color/white"
        app:iconTint="@color/white"
        />
    <item
        android:id="@+id/menu_hide_task_completed"
        android:title="@string/hide_task_completed"
        android:icon="@drawable/ic_check"
        app:showAsAction="always"
        android:iconTint="@color/white"
        app:iconTint="@color/white"
        />
    <item
        android:id="@+id/menu_add_task"
        android:title="add task"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        android:iconTint="@color/white"
        app:iconTint="@color/white"
        />

    <item
        android:id="@+id/menu_show_number"
        android:title="@string/show_number"
        android:checked="true"
        app:showAsAction="never"
        android:checkable="true"
        />












</menu>