<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todo_list.view.AddTaskActivity"
    android:padding="10dp"
    android:background="@color/color_edit_2"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="Add New Task"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tv_task_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/task_count"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_title"
        />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:hint="@string/name"
        android:layout_below="@id/tv_task_count"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine|textNoSuggestions|textCapSentences"
        />
    <EditText
        android:id="@+id/edit_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:hint="@string/describe"
        android:layout_below="@id/edit_name"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine|textNoSuggestions|textCapSentences"
        />

    <RelativeLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_describe"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_ok"
            android:background="@drawable/bg_button"
            android:layout_alignParentRight="true"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn_cancel"
            android:layout_toLeftOf="@id/btn_ok"
            android:background="@drawable/bg_button"
            android:layout_marginEnd="10dp"
            />
    </RelativeLayout>


</RelativeLayout>